# gameTheory

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
examples/json/: cournot_symbolic.json  stackelberg_symbolic.json
gametheory_symbolic/: __init__.py  mathpix_ocr.py
gametheory_symbolic/algebra/: calculus.py  parsing.py  solve_sym.py
gametheory_symbolic/core/: model.py  types.py
gametheory_symbolic/solvers/: partial_symbolic.py  sequential_symbolic.py  simulate_numeric.py  simultaneous_symbolic.py
ui/: app.py  app2.py
